# easyselenium

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  get_chromedriver.sh  setup.cfg
src/: __init__.py  functions.py  session.py
tests/: easyselenium_tests.py
