[metadata]
name = easy-selenium-yairfax
version = 0.0.3
author = Yair Fax
author_email = yairshop@gmail.com
description = A package with some Selenium utility functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yairfax/easyselenium
project_urls =
    Bug Tracker = https://github.com/yairfax/easyselenium/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
   easy_selenium = src
packages = easy_selenium
python_requires = >=3.6
install_requires =
    selenium

[options.packages.find]
where = src